flow data from entity to response dto by mapper